# mle-tech-challenge-4

./: .gitignore  README.md  docker-compose.yaml  hello.py  prometheus.yaml  pyproject.toml  run_mlflow.sh  teste.ipynb
api/: app.py  pyproject.toml
config/: config.py  custom_lstm_config.yaml  settings.toml
logs/api/: api.log.2025-02-02
logs/datalake_controller/: datalake_controller.log.2025-02-02
logs/download_files/: download_files.log.2025-02-02
logs/model/: model.log.2025-01-31
logs/setup/: setup.log.2025-01-31  setup.log.2025-02-02
ml_models/: my_lstm.pth  neuralforecast_lstm_v4_1_000_epochs.joblib
new_scripts/: 00_download_files.py  01_tune_model.py  02_train_model.py
new_scripts/deltalake/unique_id=ABEV3.SA/: part-00001-9714ffac-1bda-45d0-afe1-35fc9618030f-c000.snappy.parquet
new_scripts/deltalake/unique_id=BBAS3.SA/: part-00001-ec8fbaf7-2734-41fa-9d47-421a88165b9c-c000.snappy.parquet
new_scripts/deltalake/unique_id=BBDC3.SA/: part-00001-b6400511-4e18-4157-b2f2-8f3e7a422c18-c000.snappy.parquet
new_scripts/deltalake/unique_id=BBDC4.SA/: part-00001-acfa563c-082e-43ee-8a44-c2e38682c40e-c000.snappy.parquet
new_scripts/deltalake/unique_id=BPAC11.SA/: part-00001-9f257c01-8847-42ac-a1a0-5dd8e3fd08ac-c000.snappy.parquet
new_scripts/deltalake/unique_id=ITSA4.SA/: part-00001-041e188b-d4d0-4546-8d3c-bf7f33328ed7-c000.snappy.parquet
new_scripts/deltalake/unique_id=ITUB4.SA/: part-00001-f0c34e86-df80-4ce7-b9c6-e79e39ffd0d7-c000.snappy.parquet
new_scripts/deltalake/unique_id=JBSS3.SA/: part-00001-2bbb6f76-908e-4797-96f0-c9c288260c22-c000.snappy.parquet
new_scripts/deltalake/unique_id=KLBN11.SA/: part-00001-15049983-cafe-479d-8c08-ee45d09d4a3a-c000.snappy.parquet
new_scripts/deltalake/unique_id=PETR4.SA/: part-00001-30eb2df3-dce6-4633-ab9d-d5ef9f11bf8f-c000.snappy.parquet
new_scripts/deltalake/unique_id=SANB11.SA/: part-00001-ed3031dc-37d3-4f7b-9ff9-bd0260ebd396-c000.snappy.parquet
new_scripts/deltalake/unique_id=VALE3.SA/: part-00001-743f2f27-8b4d-4957-896f-be94012b7f74-c000.snappy.parquet
new_scripts/deltalake/unique_id=WEGE3.SA/: part-00001-0a4db8cc-b579-491c-8000-5fbd805c6b5a-c000.snappy.parquet
new_scripts/src/: utils.py
notebooks/: 00_exploratoria.ipynb  01_salva_minio.ipynb  completo.ipynb  meu.ipynb  teste_lstm_2.ipynb
readme_files/: GRAFANA.md
scripts/: 00_download_files.py  01_tune_model.py  02_train_model.py  03_train_model.py  lstm_training.py
src/: custom_dataloader.py  utils.py
tc4-api/: .dockerignore  Dockerfile  README.md  pyproject.toml  receive.py
tc4-api/api/: app.py
tc4-api/api/controllers/: datalake_controller.py  model_controller.py
tc4-api/business_rules/: download_files.py  model.py  notebook.ipynb
tc4-api/lightning_logs/version_0/: events.out.tfevents.1738714920.BOOK-AUMV1ST6T4  hparams.yaml
tc4-api/src/: setup.py  utils.py
volumes/grafana/var/: grafana.db
