[project]
name = "tech-challenge-4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.35.86",
    "deltalake>=0.22.3",
    "dynaconf>=3.2.6",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "joblib>=1.4.2",
    "matplotlib>=3.10.0",
    "mlflow>=2.19.0",
    "neuralforecast>=1.7.7",
    "polars>=1.17.1",
    "psutil>=6.1.1",
    "pynvml>=12.0.0",
    "yfinance>=0.2.51",
]

[tool.setuptools]
packages = ["src"]
package-dir = {"" = "src"}
