[project]
name = "tc4-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deltalake>=0.22.3",
    "fastapi[standard]>=0.115.6",
    "joblib>=1.4.2",
    "logfire[fastapi]>=2.9.0",
    "matplotlib>=3.10.0",
    "neuralforecast>=1.7.7",
    "prometheus-client>=0.21.1",
    "tqdm>=4.67.1",
    "yfinance>=0.2.51",
]
